--- a/Midterm Project/README
+++ b/Midterm Project/README
@@ -1,1 +1,9 @@
+UW Madison ECE 533 - Image Processing
+Midterm Project
 
+Astrophotography involving the following topics:
+- Pre-processing
+- Alignment
+- Stacking
+- Color space transforms
+- Post-processing
